# ray-tracer

./: .gitignore  CMakeLists.txt  README.md  plan.typ  render_pos_change.ppm  render_recent.ppm  render_small.ppm
.cache/clangd/index/: Hittable.hh.6DDD2FFBE0AFEFD6.idx  Ray.h.93AA6DDC2490F662.idx  Ray.h.F0578E8B438855B3.idx  Ray.hh.CD4DDD97E8E997CD.idx  Sphere.hh.CE3170A14A941DF0.idx  Vec.h.1A1C8A645990E821.idx  Vec.h.9E7E3E6D350DBACB.idx  Vec.hh.80B44CC7C1281CAE.idx  main.cc.D8C20B986A7A22FE.idx
include/: Abstract.hh  Camera.hh  Hittable.hh  HittableList.hh  Plane.hh  Ray.hh  Sphere.hh  Triangle.hh  Vec.hh  util.hh
include/Hittable/: Hittable.hh  Material.hh
include/Materials/: Dielectric.hh  Matte.hh  Metal.hh
include/Shapes/: Plane.hh  Sphere.hh  Triangle.hh
include/WorldBuilding/: Camera.hh  HittableList.hh  Ray.hh  Vec.hh
src/: Hittable.h  Ray.h  Sphere.h  Vec.h  main.cc  util.cc
src/Materials/: Dielectric.cc  Matte.cc  Metal.cc
src/Shapes/: Plane.cc  Sphere.cc  Triangle.cc
src/WorldBuilding/: Camera.cc  HittableList.cc  Ray.cc  Vec.cc
